# lark-mcp-bridge

./: .gitignore  LICENSE  README.md  lark-mcp-bridge.toml.example  pyproject.toml
.github/workflows/: publish.yml  test.yml
.kiro/hooks/: sync-docs-on-edit.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
docs/: API_SPEC.md  CHANGELOG.md  DEPLOYMENT.md  EVALUATION.md  INDEX.md  OBSERVABILITY.md  PROJECT_DESIGN.md  PROMPTS_GUIDE.md  REVIEW_CHECKLIST.md  ROADMAP.md  SECURITY.md  TESTING.md
scripts/: analyze_audit.py  benchmark.py
src/lark_mcp_bridge/: __init__.py  __main__.py  audit.py  composite.py  config.py  discovery.py  errors.py  executor.py  filters.py  resources.py  server.py  startup.py
src/lark_mcp_bridge/prompts/: __init__.py  calendar.md
tests/: conftest.py  test_audit.py  test_composite.py  test_config.py  test_discovery.py  test_executor.py  test_filters.py  test_resources.py  test_server.py  test_shortcuts_p0.py  test_shortcuts_p1.py  test_shortcuts_p2.py  test_smoke.py  test_startup.py
tests/fixtures/schema/: all_tools.json
